tests/compiletests/ui/glam/invalid_vector_type_macro.stderr
error: `#[spirv(vector)]` must have 2, 3 or 4 members
 --> $DIR/invalid_vector_type_macro.rs:9:1
  |
9 | pub struct FewerFields {
  | ^^^^^^^^^^^^^^^^^^^^^^

error: `#[spirv(vector)]` must have 2, 3 or 4 members
  --> $DIR/invalid_vector_type_macro.rs:15:1
   |
15 | pub struct TooManyFields {
   | ^^^^^^^^^^^^^^^^^^^^^^^^

error: `#[spirv(vector)]` member types must all be the same
  --> $DIR/invalid_vector_type_macro.rs:27:1
   |
27 | pub struct DifferentTypes {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

